# coroICA-python

./: .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  MAINTAINERS  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg
_downloads/37f9577edfa6a782546e3033c360ca26/: plot_coroICAexample.ipynb
_downloads/e97f0829d330be675af485e08b6d116a/: plot_coroICAexample.py
_modules/: index.html
_modules/coroica/: coroica.html  uwedgeica.html
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt  plot_coroICAexample.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  plot_coroICAexample.html  sg_execution_times.html
coroica/: __init__.py  coroica.py  utils.py  uwedge.py  uwedgeica.py
coroica/tests/: test_common.py  test_uwedge.py
docs/: Makefile  conf.py  index.rst  requirements.txt
examples/: README.txt  plot_coroICAexample.py  plot_groupICAexample.py
groupica/: __init__.py  groupica.py  utils.py  uwedge.py  uwedgeica.py
groupica/tests/: test_common.py
