[metadata]
name = groupICA
summary = groupICA (scikit-learn compatible)
maintainer = Niklas Pfister and Sebastian Weichwald
description-file = README.md
home-page = http://github.com/sweichwald/groupICA-python
license = AGPL-3.0
classifiers = 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development

[files]
packages = groupica

[wheel]
universal = 1
